Add customizable inline HUD and SegmentedFlowPicker
Introduces new options for the closed notch inline HUD, allowing users to toggle descriptive text, progress bar, and percentage display. Replaces the tab selection with SegmentedFlowPicker for improved navigation. Updates settings and constants to support new HUD customization options, and adds a View+If extension for conditional view modifiers. Also includes minor code cleanups and dependency addition for SwiftFlowPicker.

--- a/boringNotch/Localizable.xcstrings
+++ b/boringNotch/Localizable.xcstrings
@@ -5902,6 +5902,9 @@
         }
       }
     },
+    "Compact" : {
+
+    },
     "Continue" : {
       "localizations" : {
         "ar" : {
@@ -11409,6 +11412,7 @@
       }
     },
     "HUD style" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -11709,6 +11713,7 @@
       }
     },
     "Inline" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -20012,6 +20017,9 @@
         }
       }
     },
+    "Show progress bar" : {
+
+    },
     "Show settings icon in notch" : {
       "localizations" : {
         "ar" : {
@@ -20211,6 +20219,9 @@
           }
         }
       }
+    },
+    "Show text" : {
+
     },
     "Slider color" : {
       "localizations" : {
@@ -20912,6 +20923,9 @@
           }
         }
       }
+    },
+    "Style" : {
+
     },
     "Support Us" : {
       "extractionState" : "stale",
